# zproto

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cspell.config.yaml  last_used_database.txt
.cspell/: project-words.txt  rust-custom.txt  rust-libs.txt  zaber-words.txt
.github/workflows/: audit-ci.yml  audit-cron.yml  ci-deploy.yml  ci.yml  common.yml  database-check.yml  release.yml  rust.yml
crates/generate-apis/src/: db.rs  gen.rs  lib.rs  main.rs
crates/zproto/: Cargo.toml
crates/zproto/examples/: ascii.rs
crates/zproto/src/: backend.rs  routine.rs  timeout_guard.rs
crates/zproto/src/ascii/: chain.rs  checksum.rs  id.rs  packet.rs  port.rs
crates/zproto/src/ascii/chain/: iter.rs  scope.rs
crates/zproto/src/ascii/port/: iter.rs  options.rs  test.rs
crates/zproto/src/ascii/response/: info.rs
crates/zproto/src/ascii/setting/private/: v6_14.rs  v6_16.rs  v6_17.rs  v6_18.rs  v6_20.rs  v6_22.rs  v6_24.rs  v6_25.rs  v6_26.rs  v6_30.rs  v7_05.rs  v7_06.rs  v7_07.rs  v7_09.rs  v7_12.rs  v7_13.rs  v7_14.rs  v7_15.rs  v7_17.rs  v7_20.rs  v7_23.rs  v7_24.rs  v7_28.rs  v7_29.rs  v7_31.rs  v7_32.rs  v7_33.rs  v7_34.rs  v7_35.rs  v7_37.rs  v7_38.rs  v7_39.rs
crates/zproto/src/binary/: port.rs
crates/zproto/src/error/: ascii.rs
crates/zproto/src/routine/: seq.rs
crates/zproto/test/binary/: 01-type-inference.stderr  03-reply-data.rs  03-reply-data.stderr
examples/: ascii.rs  binary.rs  example-ascii.rs  example-binary.rs
scripts/: database_modified_stamp  download_database
scripts/generate-apis/: Cargo.toml
scripts/generate-apis/src/: gen.rs  lib.rs  main.rs
src/: ascii.rs  backend.rs  binary.rs  convert.rs  error.rs  lib.rs  routine.rs  shared.rs  timeout_guard.rs
src/ascii/: chain.rs  checksum.rs  command.rs  data_type.rs  id.rs  marker.rs  packet.rs  parse.rs  port.rs  response.rs  scope.rs  setting.rs
src/ascii/chain/: data_type.rs  info.rs  iter.rs  setting.rs
src/ascii/chain/setting/private/: v6_14.rs  v6_15.rs  v6_16.rs  v6_17.rs  v6_18.rs  v6_19.rs  v6_20.rs  v6_21.rs  v6_22.rs  v6_23.rs  v6_24.rs  v6_25.rs  v6_26.rs  v6_27.rs  v6_28.rs  v6_29.rs  v6_30.rs  v6_31.rs  v6_32.rs  v7_01.rs  v7_03.rs  v7_05.rs  v7_06.rs  v7_07.rs  v7_08.rs  v7_09.rs  v7_10.rs  v7_11.rs  v7_12.rs  v7_13.rs  v7_14.rs  v7_15.rs  v7_16.rs  v7_17.rs  v7_18.rs  v7_19.rs  v7_20.rs  v7_21.rs  v7_22.rs  v7_23.rs  (+15 more)
src/ascii/packet/: packet.rs  test.rs  token.rs  visitor.rs
src/ascii/parse/: packet.rs  test.rs  token.rs  visitor.rs
src/ascii/port/: handlers.rs  iter.rs  options.rs  routine.rs  test.rs
src/ascii/response/: alert.rs  builder.rs  check.rs  info.rs  reply.rs
src/ascii/setting/: data_types.rs  mod.inc
src/ascii/setting/private/: v6_14.rs  v6_15.rs  v6_16.rs  v6_17.rs  v6_18.rs  v6_19.rs  v6_20.rs  v6_21.rs  v6_22.rs  v6_23.rs  v6_24.rs  v6_25.rs  v6_26.rs  v6_27.rs  v6_28.rs  v6_29.rs  v6_30.rs  v6_31.rs  v6_32.rs  v7_01.rs  v7_03.rs  v7_05.rs  v7_06.rs  v7_07.rs  v7_08.rs  v7_09.rs  v7_10.rs  v7_11.rs  v7_12.rs  v7_13.rs  v7_14.rs  v7_15.rs  v7_16.rs  v7_17.rs  v7_18.rs  v7_19.rs  v7_20.rs  v7_21.rs  v7_22.rs  v7_23.rs  (+18 more)
src/binary/: command.rs  handlers.rs  port.rs  traits.rs
src/error/: all.rs  ascii.rs  binary.rs
src/routine/: seq.rs
test/binary/: 01-type-inference.rs  01-type-inference.stderr  02-port-parameters.rs  02-port-parameters.stderr  03-reply-data.rs  03-reply-data.stderr
