[package]
name = "zproto"
version = "0.3.0"
authors = ["Stephen Hunt <stphnhnt.git@gmail.com>"]
edition = "2021"
description = "A library from communicating with Zaber products in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/stphnt/zproto"
documentation = "https://docs.rs/zproto"
homepage = "https://github.com/stphnt/zproto"
keywords = ["Zaber", "ASCII", "Binary", "serial", "RS232"]
categories = ["hardware-support"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["ascii", "binary"]
# Include the ASCII protocol
ascii = []
# Include the Binary protocol
binary = []

# Use the nightly-only `doc_cfg` feature when generating the documentation.
doc_cfg = []

[dependencies]
log = "0.4.17"
paste = "1.0.12"
serialport = "4.2.1"

[dev-dependencies]
simple_logger = "4.1.0"
static_assertions = "1.1.0"
trybuild = "1.0.80"

[[example]]
name = "ascii"
required-features = ["ascii"]

[[example]]
name = "binary"
required-features = ["binary"]
