[package]
name = "zproto"
version = "0.4.0-pre"
authors = ["Stephen Hunt <stphnhnt.git@gmail.com>"]
edition = "2021"
description = "A library from communicating with Zaber products in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/stphnt/zproto"
documentation = "https://docs.rs/zproto"
homepage = "https://github.com/stphnt/zproto"
keywords = ["Zaber", "ASCII", "Binary", "serial", "RS232"]
categories = ["hardware-support"]
include = [
    "examples/",
    "src/",
    "test/",
    "LICENSE",
    "README.md",
]

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["scripts/generate-apis"]

[features]
default = ["ascii", "binary", "v_latest"]
ascii = [] # Include the ASCII protocol
binary = [] # Include the Binary protocol
v6_14 = [] # Enable APIs related to firmware version 6.14
v6_15 = [] # Enable APIs related to firmware version 6.15
v6_16 = [] # Enable APIs related to firmware version 6.16
v6_17 = [] # Enable APIs related to firmware version 6.17
v6_18 = [] # Enable APIs related to firmware version 6.18
v6_19 = [] # Enable APIs related to firmware version 6.19
v6_20 = [] # Enable APIs related to firmware version 6.20
v6_21 = [] # Enable APIs related to firmware version 6.21
v6_22 = [] # Enable APIs related to firmware version 6.22
v6_23 = [] # Enable APIs related to firmware version 6.23
v6_24 = [] # Enable APIs related to firmware version 6.24
v6_25 = [] # Enable APIs related to firmware version 6.25
v6_26 = [] # Enable APIs related to firmware version 6.26
v6_27 = [] # Enable APIs related to firmware version 6.27
v6_28 = [] # Enable APIs related to firmware version 6.28
v6_29 = [] # Enable APIs related to firmware version 6.29
v6_30 = [] # Enable APIs related to firmware version 6.30
v6_31 = [] # Enable APIs related to firmware version 6.31
v6_32 = [] # Enable APIs related to firmware version 6.32
v7_01 = [] # Enable APIs related to firmware version 7.01
v7_03 = [] # Enable APIs related to firmware version 7.03
v7_05 = [] # Enable APIs related to firmware version 7.05
v7_06 = [] # Enable APIs related to firmware version 7.06
v7_07 = [] # Enable APIs related to firmware version 7.07
v7_08 = [] # Enable APIs related to firmware version 7.08
v7_09 = [] # Enable APIs related to firmware version 7.09
v7_10 = [] # Enable APIs related to firmware version 7.10
v7_11 = [] # Enable APIs related to firmware version 7.11
v7_12 = [] # Enable APIs related to firmware version 7.12
v7_13 = [] # Enable APIs related to firmware version 7.13
v7_14 = [] # Enable APIs related to firmware version 7.14
v7_15 = [] # Enable APIs related to firmware version 7.15
v7_16 = [] # Enable APIs related to firmware version 7.16
v7_17 = [] # Enable APIs related to firmware version 7.17
v7_18 = [] # Enable APIs related to firmware version 7.18
v7_19 = [] # Enable APIs related to firmware version 7.19
v7_20 = [] # Enable APIs related to firmware version 7.20
v7_21 = [] # Enable APIs related to firmware version 7.21
v7_22 = [] # Enable APIs related to firmware version 7.22
v7_23 = [] # Enable APIs related to firmware version 7.23
v7_24 = [] # Enable APIs related to firmware version 7.24
v7_25 = [] # Enable APIs related to firmware version 7.25
v7_26 = [] # Enable APIs related to firmware version 7.26
v7_27 = [] # Enable APIs related to firmware version 7.27
v7_28 = [] # Enable APIs related to firmware version 7.28
v7_29 = [] # Enable APIs related to firmware version 7.29
v7_30 = [] # Enable APIs related to firmware version 7.30
v7_31 = [] # Enable APIs related to firmware version 7.31
v7_32 = [] # Enable APIs related to firmware version 7.32
v7_33 = [] # Enable APIs related to firmware version 7.33
v7_34 = [] # Enable APIs related to firmware version 7.34
v7_35 = [] # Enable APIs related to firmware version 7.35
v7_36 = [] # Enable APIs related to firmware version 7.36
v7_37 = [] # Enable APIs related to firmware version 7.37
v7_38 = [] # Enable APIs related to firmware version 7.38
v7_39 = [] # Enable APIs related to firmware version 7.39
v_latest = [] # Enable APIs related to the latest firmware version

# Use the nightly-only `doc_cfg` feature when generating the documentation.
doc_cfg = []

[dependencies]
log = "0.4.19"
paste = "1.0.12"
serialport = "4.2.1"

[dev-dependencies]
simple_logger = "5.0.0"
static_assertions = "1.1.0"
trybuild = "1.0.80"

[[example]]
name = "ascii"
required-features = ["ascii"]

[[example]]
name = "binary"
required-features = ["binary"]

[lints.clippy]
cargo = "deny"
# Some dependencies each have common dependencies but with different versions
# We cannot fix this, so ignore the lint.
multiple_crate_versions = { level = "allow", priority = 1 }

pedantic = "deny"
# Pedantic group overrides
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 } # too many
wildcard_imports = { level = "allow", priority = 1 } # we use wildcard imports judiciously
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }

[lints.rust]
# groups
warnings = "deny"
rust-2018-idioms = "deny"

# individual lints
missing-docs = "deny"
macro-use-extern-crate = "deny"
meta-variable-misuse = "deny"
missing-debug-implementations = "deny"
non-local-definitions = "deny"
redundant-lifetimes = "deny"
unit-bindings = "deny"
unsafe-op-in-unsafe-fn = "deny"
unused-lifetimes = "deny"

[lints.rustdoc]
missing-crate-level-docs = "deny"
unescaped-backticks = "deny"

