[package]
name = "zproto"
version = "0.4.1"
authors = ["Stephen Hunt <stphnhnt.git@gmail.com>"]
edition = "2021"
description = "A library from communicating with Zaber products in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/stphnt/zproto"
documentation = "https://docs.rs/zproto"
homepage = "https://github.com/stphnt/zproto"
keywords = ["Zaber", "ASCII", "Binary", "serial", "RS232"]
categories = ["hardware-support"]
include = [
    "examples/",
    "src/",
    "test/",
    "LICENSE",
    "README.md",
]

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["scripts/generate-apis"]

[features]
default = ["ascii", "binary"]
ascii = [] # Include the ASCII protocol
binary = [] # Include the Binary protocol
mock = [] # Include the Mock backend, for use in consuming crate tests

unstable_v6_14 = [] # Enable APIs related to firmware version 6.14 (requires the '--cfg unstable' rustc flag)
unstable_v6_15 = [] # Enable APIs related to firmware version 6.15 (requires the '--cfg unstable' rustc flag)
unstable_v6_16 = [] # Enable APIs related to firmware version 6.16 (requires the '--cfg unstable' rustc flag)
unstable_v6_17 = [] # Enable APIs related to firmware version 6.17 (requires the '--cfg unstable' rustc flag)
unstable_v6_18 = [] # Enable APIs related to firmware version 6.18 (requires the '--cfg unstable' rustc flag)
unstable_v6_19 = [] # Enable APIs related to firmware version 6.19 (requires the '--cfg unstable' rustc flag)
unstable_v6_20 = [] # Enable APIs related to firmware version 6.20 (requires the '--cfg unstable' rustc flag)
unstable_v6_21 = [] # Enable APIs related to firmware version 6.21 (requires the '--cfg unstable' rustc flag)
unstable_v6_22 = [] # Enable APIs related to firmware version 6.22 (requires the '--cfg unstable' rustc flag)
unstable_v6_23 = [] # Enable APIs related to firmware version 6.23 (requires the '--cfg unstable' rustc flag)
unstable_v6_24 = [] # Enable APIs related to firmware version 6.24 (requires the '--cfg unstable' rustc flag)
unstable_v6_25 = [] # Enable APIs related to firmware version 6.25 (requires the '--cfg unstable' rustc flag)
unstable_v6_26 = [] # Enable APIs related to firmware version 6.26 (requires the '--cfg unstable' rustc flag)
unstable_v6_27 = [] # Enable APIs related to firmware version 6.27 (requires the '--cfg unstable' rustc flag)
unstable_v6_28 = [] # Enable APIs related to firmware version 6.28 (requires the '--cfg unstable' rustc flag)
unstable_v6_29 = [] # Enable APIs related to firmware version 6.29 (requires the '--cfg unstable' rustc flag)
unstable_v6_30 = [] # Enable APIs related to firmware version 6.30 (requires the '--cfg unstable' rustc flag)
unstable_v6_31 = [] # Enable APIs related to firmware version 6.31 (requires the '--cfg unstable' rustc flag)
unstable_v6_32 = [] # Enable APIs related to firmware version 6.32 (requires the '--cfg unstable' rustc flag)
unstable_v7_01 = [] # Enable APIs related to firmware version 7.01 (requires the '--cfg unstable' rustc flag)
unstable_v7_03 = [] # Enable APIs related to firmware version 7.03 (requires the '--cfg unstable' rustc flag)
unstable_v7_05 = [] # Enable APIs related to firmware version 7.05 (requires the '--cfg unstable' rustc flag)
unstable_v7_06 = [] # Enable APIs related to firmware version 7.06 (requires the '--cfg unstable' rustc flag)
unstable_v7_07 = [] # Enable APIs related to firmware version 7.07 (requires the '--cfg unstable' rustc flag)
unstable_v7_08 = [] # Enable APIs related to firmware version 7.08 (requires the '--cfg unstable' rustc flag)
unstable_v7_09 = [] # Enable APIs related to firmware version 7.09 (requires the '--cfg unstable' rustc flag)
unstable_v7_10 = [] # Enable APIs related to firmware version 7.10 (requires the '--cfg unstable' rustc flag)
unstable_v7_11 = [] # Enable APIs related to firmware version 7.11 (requires the '--cfg unstable' rustc flag)
unstable_v7_12 = [] # Enable APIs related to firmware version 7.12 (requires the '--cfg unstable' rustc flag)
unstable_v7_13 = [] # Enable APIs related to firmware version 7.13 (requires the '--cfg unstable' rustc flag)
unstable_v7_14 = [] # Enable APIs related to firmware version 7.14 (requires the '--cfg unstable' rustc flag)
unstable_v7_15 = [] # Enable APIs related to firmware version 7.15 (requires the '--cfg unstable' rustc flag)
unstable_v7_16 = [] # Enable APIs related to firmware version 7.16 (requires the '--cfg unstable' rustc flag)
unstable_v7_17 = [] # Enable APIs related to firmware version 7.17 (requires the '--cfg unstable' rustc flag)
unstable_v7_18 = [] # Enable APIs related to firmware version 7.18 (requires the '--cfg unstable' rustc flag)
unstable_v7_19 = [] # Enable APIs related to firmware version 7.19 (requires the '--cfg unstable' rustc flag)
unstable_v7_20 = [] # Enable APIs related to firmware version 7.20 (requires the '--cfg unstable' rustc flag)
unstable_v7_21 = [] # Enable APIs related to firmware version 7.21 (requires the '--cfg unstable' rustc flag)
unstable_v7_22 = [] # Enable APIs related to firmware version 7.22 (requires the '--cfg unstable' rustc flag)
unstable_v7_23 = [] # Enable APIs related to firmware version 7.23 (requires the '--cfg unstable' rustc flag)
unstable_v7_24 = [] # Enable APIs related to firmware version 7.24 (requires the '--cfg unstable' rustc flag)
unstable_v7_25 = [] # Enable APIs related to firmware version 7.25 (requires the '--cfg unstable' rustc flag)
unstable_v7_26 = [] # Enable APIs related to firmware version 7.26 (requires the '--cfg unstable' rustc flag)
unstable_v7_27 = [] # Enable APIs related to firmware version 7.27 (requires the '--cfg unstable' rustc flag)
unstable_v7_28 = [] # Enable APIs related to firmware version 7.28 (requires the '--cfg unstable' rustc flag)
unstable_v7_29 = [] # Enable APIs related to firmware version 7.29 (requires the '--cfg unstable' rustc flag)
unstable_v7_30 = [] # Enable APIs related to firmware version 7.30 (requires the '--cfg unstable' rustc flag)
unstable_v7_31 = [] # Enable APIs related to firmware version 7.31 (requires the '--cfg unstable' rustc flag)
unstable_v7_32 = [] # Enable APIs related to firmware version 7.32 (requires the '--cfg unstable' rustc flag)
unstable_v7_33 = [] # Enable APIs related to firmware version 7.33 (requires the '--cfg unstable' rustc flag)
unstable_v7_34 = [] # Enable APIs related to firmware version 7.34 (requires the '--cfg unstable' rustc flag)
unstable_v7_35 = [] # Enable APIs related to firmware version 7.35 (requires the '--cfg unstable' rustc flag)
unstable_v7_36 = [] # Enable APIs related to firmware version 7.36 (requires the '--cfg unstable' rustc flag)
unstable_v7_37 = [] # Enable APIs related to firmware version 7.37 (requires the '--cfg unstable' rustc flag)
unstable_v7_38 = [] # Enable APIs related to firmware version 7.38 (requires the '--cfg unstable' rustc flag)
unstable_v7_39 = [] # Enable APIs related to firmware version 7.39 (requires the '--cfg unstable' rustc flag)
unstable_v_latest = [] # Enable APIs related to the latest firmware version (requires the '--cfg unstable' rustc flag)


# Use the nightly-only `doc_cfg` feature when generating the documentation.
doc_cfg = []

[dependencies]
log = "0.4.19"
paste = "1.0.12"
serialport = "4.7.0"

[dev-dependencies]
simple_logger = "5.0.0"
static_assertions = "1.1.0"

[[example]]
name = "ascii"
required-features = ["ascii"]

[[example]]
name = "binary"
required-features = ["binary"]

[lints.clippy]
cargo = "deny"
# Some dependencies each have common dependencies but with different versions
# We cannot fix this, so ignore the lint.
multiple_crate_versions = { level = "allow", priority = 1 }

pedantic = "deny"
# Pedantic group overrides
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 } # too many
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }

[lints.rust]
# groups
warnings = "deny"
rust-2018-idioms = "deny"

# individual lints
missing-docs = "deny"
macro-use-extern-crate = "deny"
meta-variable-misuse = "deny"
missing-debug-implementations = "deny"
non-local-definitions = "deny"
redundant-lifetimes = "deny"
unit-bindings = "deny"
unsafe-op-in-unsafe-fn = "deny"
unused-lifetimes = "deny"

unexpected_cfgs = { level = "deny", check-cfg = ['cfg(unstable)'] }

[lints.rustdoc]
missing-crate-level-docs = "deny"
unescaped-backticks = "deny"

