[package]
name = "generate-apis"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.9"
anyhow = "1.0.65"
convert_case = "0.8.0"
env_logger = "0.11.6"
fnv = "1.0.7"
log = "0.4.17"
rusqlite = { version = "0.37.0", features = ["bundled"] }
toml_edit = "0.22.22"
